# KUKA-LWR-ROS-Melodic

./: README.md
kuka_controllers/: CMakeLists.txt  package.xml
kuka_controllers/config/: kuka_control.yaml
kuka_controllers/include/kuka_controllers/: arm_state_controller.h  backstepping_controller.h  cartesian_impedance_controller.h  computed_torque_controller.h  dynamic_sliding_mode_controller.h  dynamic_sliding_mode_controller_task_space.h  gravity_compensation.h  inverse_dynamics_controller.h  joint_impedance_controller.h  minimum_effort_inverse_dynamics.h  multi_task_priority_inverse_dynamics.h  (+4 more)
kuka_controllers/launch/: kuka_control.launch  load_controller.launch
kuka_controllers/msg/: CartesianImpedancePoint.msg
kuka_controllers/src/: KinematicChainControllerBase.cpp  arm_state_controller.cpp  backstepping_controller.cpp  cartesian_command_vito.cpp  cartesian_impedance_controller.cpp  computed_torque_controller.cpp  dynamic_sliding_mode_controller.cpp  dynamic_sliding_mode_controller_task_space.cpp  gravity_compensation.cpp  inverse_dynamics_controller.cpp  joint_impedance_controller.cpp  minimum_effort_inverse_dynamics.cpp  multi_task_priority_inverse_dynamics.cpp  multi_task_priority_inverse_kinematics.cpp  one_task_inverse_dynamics_jl.cpp  one_task_inverse_kinematics.cpp  twist_controller.cpp
kuka_controllers/srv/: SetCartesianImpedanceCommand.srv
kuka_description/: CMakeLists.txt  package.xml
kuka_description/config/: kuka_control.yaml  urdf.rviz  urdf_rviz.rviz
kuka_description/launch/: urdf_gazebo.launch  urdf_rviz.launch  urdf_visualize.launch
kuka_description/meshes/: kuka_tool.STL  link_7.STL  link_7_original.STL
kuka_description/model/: KUKA.gv  kuka.urdf.xacro  kuka_lwr.gazebo.xacro  kuka_lwr.transmission.xacro  kuka_lwr.urdf.xacro  kuka_model.blend  kuka_only.urdf.xacro  kuku.blend  kuku.blend1  model.urdf  single_lwr_robot.gv  untitled.blend  untitled.blend1
kuka_robot/: CMakeLists.txt  package.xml
kuka_robot/config/: 980241-FRI-Driver.init  urdf_rviz.rviz
kuka_robot/launch/: kuka.launch
(+115 files in other folders)
