<package format="2">
  <name>kuka_robot</name>
  <version>0.1.0</version>
  <description>kuka_robot package</description>

  <maintainer email="saba.mansourfar@mail.polimi.it">Saba Mansourfar</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lwr_hw</exec_depend>
  <exec_depend>lwr_description</exec_depend>
  <exec_depend>lwr_controllers</exec_depend>

  <export>
  </export>
</package>